# kata_anagram

./: CMakeLists.txt  Readme.md  Scaffold.md  anagram.cpp  lab.cpp
cmake/: HunterInit.cmake
